kubernetes/apps/flux-system/flux-operator/instance/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-instance-network-policy
spec:
  endpointSelector:
    matchLabels: &labels
      app.samoth.eu/instance: flux-instance
  ingress:
    - fromEndpoints:
        - matchLabels: *labels
  egress:
    - toEndpoints:
        - matchLabels: *labels
